@@ -2,6 +2,18 @@
 ===============================================================================
 Tag Creator: njn01
 Tag Date:    1  October 2009
+Tag Name:    pop2/trunk_tags/ccsm_pop_2_1_20091001a
+Tag Testing:  Visual inspection of gx1v6 tavg fields (*.pop.h.* files)
+            
+Tag Summary: Small corrections for the new fields generated by tavg.F90 in 
+             the ccsm_pop_2_1_20091001 tag.
+
+M           18703   source/vmix_kpp.F90
+M           18703   source/vertical_mix.F90
+M           18703   source/tavg.F90
+===============================================================================
+Tag Creator: njn01
+Tag Date:    1  October 2009
 Tag Name:    pop2/trunk_tags/ccsm_pop_2_1_20091001
 Tag Testing:  Debug smoke tests gx1v6 and gx3v7. Code walkthrough with Gokhan.
               Two-month gx1v6 test and review of new output fields by Gokhan.
